ASSERT when a layer with a foreground layer is in 'paint into ancestor' mode https://bugs.webkit.org/show_bug.cgi?id=84221

Source/WebCore:

Reviewed by Dean Jackson.

When a RenderLayerBacking doesn't require its own backing store, and is
in "paintIntoCompositingAncestor" mode, we would assert when trying to
paint its m_foregroundLayer if it had one (because of a negative z-index child).

The fix is to set the 'drawsContent' state on the m_foregroundLayer
as well as m_graphicsLayer.

Test: compositing/backing/no-backing-foreground-layer.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateDrawsContent):

LayoutTests:

Reviewed by Dean Jackson.

New testcase.

* compositing/backing/no-backing-foreground-layer-expected.txt: Added.
* compositing/backing/no-backing-foreground-layer.html: Added.

Canonical link: https://commits.webkit.org/101755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114509 268f45cc-cd09-0410-ab3c-d52691b4dbfc